--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -24,22 +24,25 @@
     </div>
 
     <!--NavBar and main content-->
-    <div class="row container-fluid">
-	<div class="span3">
-	    <div class="well sidebar-nav">
-                <ul class="nav nav-list">
-                    <li class="nav-header">Links</li>
-                    <li class="active"><a href="#">Public Cubes</a></li>
-                    <li><a href="#">Link</a></li>
-	        </ul>
-	   </div>
-	</div>
-	<div class="span7">
+    <div class="container-fluid">
+	<div class="row-fluid">
+   	    <div class="span3">
+	        <div class="well sidebar-nav">
+                    <ul class="nav nav-list">
+                        <li class="nav-header">Links</li>
+                        <li class="active"><a href="#">Public Cubes</a></li>
+                        <li><a href="#">Link</a></li>
+	            </ul>
+	       </div>
+	    </div>
+	    <div class="span9">
 		<div class="hero-unit main-header">
-			<h1>Welcome</h1>
-			Welcome to the Smart-Cube site!
+			    <h2>Welcome</h2>
+			    Welcome to the Smart-Cube site!<br/>
+			    The Smart-Cube is a device which monitors your workflow, allows you to change task easily and to see what your colleagues and friends are doing.
 		</div>
-        </div>
+	    </div>
+	</div>
     </div>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
