--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,78 +1,17 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Smart-Cube</title>
-    <!-- Bootstrap -->
-    <link href="{{ static_url("css/bootstrap.min.css") }}" rel="stylesheet" media="screen">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-      }
-    </style>
-  </head>
-  <body>
-    <!--Header bar-->
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container-fluid">
-                <a class="brand" href='/'>Smart-Cube</a>
-		{% if not loggedin %}
-		<div class='pull-right'>
-			<a class="btn" href='/login'>Login Now</a>
-		</div>
-	        <div class='pull-right navbar-text' style='margin-right: 10px'>
-	    	    Not logged in
-	        </div>
-		{% else %}
-		<div class='pull-right'>
-			<a class="btn" href="/logout">Logout</a>
-		</div>
-		<div class='pull-right navbar-text' style='margin-right: 10px'>
-		    Welcome back, {{ fname }}!
-		</div>
-		{% end %}
-            </div>
-        </div>
-    </div>
-
-    <!--NavBar and main content-->
-    <div class="container-fluid">
+{% extends "base.html" %}	    
+{% block content %}
+    <div class="span9">
+	<div class="hero-unit main-header">
+	    <h2>Welcome</h2>
+	    Welcome to the Smart-Cube site!<br/>
+	    The Smart-Cube is a device which monitors your workflow, allows you to change task easily and to see what your colleagues and friends are doing.
+	</div>
 	<div class="row-fluid">
-   	    <div class="span3">
-	        <div class="well sidebar-nav">
-                    <ul class="nav nav-list">
-                        <li class="nav-header">Links</li>
-                        <li class="active"><a href="#">Public Cubes</a></li>
-			{% if loggedin %}
-			<li><a href="/friends">Friend Cubes</a></li>
-			<li><a href="/stats">Statistics</a></li>
-			{% end %}
-			<li class="nav-header">Options</li>
-			{% if loggedin %}
-			<li><a href="/settings">Your settings</a></li>
-			{% end %}
-                        <li><a href="/about">About</a></li>
-	            </ul>
-	       </div>
-	    </div>
-	    <div class="span9">
-		<div class="hero-unit main-header">
-			    <h2>Welcome</h2>
-			    Welcome to the Smart-Cube site!<br/>
-			    The Smart-Cube is a device which monitors your workflow, allows you to change task easily and to see what your colleagues and friends are doing.
+		<div class="span12">
+			<h3>Public Smart-Cubes</h3>
+			We have no public Smart-Cubes to display at the moment - Help us out and <a href="/settings">make one of your Smart-Cubes public!</a>
+			<p><br/><a class="btn" href="/about">What are public cubes?</a><div>
 		</div>
-		<div class="row-fluid">
-			<div class="span12">
-				<h3>Public Smart-Cubes</h3>
-				We have no public Smart-Cubes to display at the moment - Help us out and <a href="/settings">make one of your Smart-Cubes public!</a>
-				<p><br/><a class="btn" href="/about">What are public cubes?</a><div>
-			</div>
-		</div>
-	    </div>
 	</div>
     </div>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="{{ static_url("js/bootstrap.min.js") }}"></script>
-  </body>
-</html>
-<html>
+{% end %}
