--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -1,73 +1,21 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Smart-Cube</title>
-    <!-- Bootstrap -->
-    <link href="{{ static_url("css/bootstrap.min.css") }}" rel="stylesheet" media="screen">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-      }
-    </style>
-  </head>
-  <body>
-    <!--Header bar-->
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container-fluid">
-                <a class="brand" href='/'>Smart-Cube</a>
-		<div class='pull-right'>
-			<a class="btn" href="/logout">Logout</a>
-		</div>
-		<div class='pull-right navbar-text' style='margin-right: 10px'>
-		    Welcome back, {{ fname }}!
-		</div>
-            </div>
-        </div>
-    </div>
-
-    <!--NavBar and main content-->
-    <div class="container-fluid">
-	<div class="row-fluid">
-   	    <div class="span3">
-	        <div class="well sidebar-nav">
-                    <ul class="nav nav-list">
-                        <li class="nav-header">Links</li>
-                        <li class="active"><a href="#">Public Cubes</a></li>
-			{% if loggedin %}
-			<li><a href="/friends">Friend Cubes</a></li>
-			<li><a href="/stats">Statistics</a></li>
-			{% end %}
-			<li class="nav-header">Options</li>
-			{% if loggedin %}
-			<li><a href="/settings">Your settings</a></li>
-			{% end %}
-                        <li><a href="/about">About</a></li>
-	            </ul>
-	       </div>
-	    </div>
-	    <div class="span9">
-		<div class="hero-unit main-header">
-			    <h2>Register</h2>
-			    {% if complete %}
-				Thank you for registering this cube! It will begin updating once it has connected to our systems.
-			    {% else %}
-				    {% if not registered %}
-					Would you like to register this Smart-Cube to your account?
-					<form action="/register" method="post">
-					    <input type="hidden" name="unique_code" value="{{ unique_code }}">
-					    <input type="submit" value="Register" class="btn">
-					</form>
-				    {% else %}
-					Sorry, this cube has already been registered! To re-register this Smart-Cube is must first be unregistered.
-				    {% end %}
-			    {% end %}
-		</div>
-	    </div>
+{% extends "base.html" %}
+{% block content %}
+<div class="span9">
+	<div class="hero-unit main-header">
+	    <h2>Register</h2>
+	    {% if complete %}
+    	    Thank you for registering this cube! It will begin updating once it has connected to our systems.
+	    {% else %}
+	        {% if not registered %}
+	        Would you like to register this Smart-Cube to your account?
+		<form action="/register" method="post">
+		    <input type="hidden" name="unique_code" value="{{ unique_code }}">
+		    <input type="submit" value="Register" class="btn">
+		</form>
+	        {% else %}
+		Sorry, this cube has already been registered! To re-register this Smart-Cube is must first be unregistered.
+	        {% end %}
+	    {% end %}
 	</div>
-    </div>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="{{ static_url("js/bootstrap.min.js") }}"></script>
-  </body>
-</html>
-<html>
+</div>
+{% end %}
