Fixed spelling and link

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -42,7 +42,7 @@
 	        <div class="well sidebar-nav">
                     <ul class="nav nav-list">
                         <li class="nav-header">Links</li>
-                        <li class="active"><a href="#">Public Cubes</a></li>
+                        <li class="active"><a href="/">Public Cubes</a></li>
 			{% if loggedin %}
 			<li><a href="/friends">Friend Cubes</a></li>
 			<li><a href="/stats">Statistics</a></li>
