--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -13,7 +13,7 @@
 		    <input type="submit" value="Register" class="btn">
 		</form>
 	        {% else %}
-		Sorry, this cube has already been registered! To re-register this Smart-Cube is must first be unregistered.
+		Sorry, this Smart-Cube has already been registered! To re-register this Smart-Cube it must first be unregistered.
 	        {% end %}
 	    {% end %}
 	</div>
