Lots changed! Database changes, template changes, backend changes

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -61,6 +61,8 @@
     </div>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="{{ static_url("js/bootstrap.min.js") }}"></script>
+    {% block js %}
+    {% end %}
   </body>
 </html>
 <html>
