--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}	    
+{% block js %}
+    <script src="{{ static_url("js/settings.js") }}"></script>
+{% end %}
 {% block content %}
     <div class="span9">
 	<div class="hero-unit main-header">
@@ -7,24 +10,56 @@
 	</div>
 	<div class="row-fluid">
 		<div class="span9">
+		    <a class="btn" data-toggle="collapse" data-target=".cubes-collapse" style="margin-bottom: 20px;">Smart-Cubes</a>
+		    <div class="collapse cubes-collapse">
+			<div class="well">
+			    {% if len(cubes) == 0 %}
+				You have no registered Smart-Cubes!
+			    {% else %}
+				{% for cube in cubes %}
+					<strong>Smart-Cube {{ cube.code }}</strong><br/>
+					Active Profile: 
+					<span id="pname{{cube.cube_id}}">
+					{% if cube.profile is None %}
+						None
+					{% else %}
+						{{cube.profile.name}}
+					{% end %}
+					</span>
+						<div class="btn-group">
+						    <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+						        Change profile
+						        <span class="caret"></span>
+						    </a>
+						    <ul class="dropdown-menu" role="menu">
+						        {% for profile in profiles %}
+							    <li><a tabindex="-1" onclick="updateProfile({{profile.profile_id}}, {{cube.cube_id}})" href="#">{{profile.name}}</a></li>	
+						        {% end %}
+						    </ul>
+						</div>
+					<br/>
+					<br/>
+				{% end %}
+			    {% end %}
+			</div>
+		    </div>
 		    <a class="btn" data-toggle="collapse" data-target=".profiles-collapse" style="margin-bottom: 20px;">Profiles</a>
 		    <div class="collapse profiles-collapse">
 			<div class="well">
 			    {% if len(profiles) == 0 %}
 				You have no profiles! A Smart-Cube uses profiles to describe what a side means. You can have many profiles and swap between them for each cube you own. <br/>
-				<a href="#">Create a profile now!</a> 
 			    {% else %}
-				Your available profiles are:<br/>
 				{% for profile in profiles %}
 					<strong>{{ profile.name }}</strong><br/>
-					Descriptor line: {{ profile.describe_line }}<br/>
-					Side names:<br/>
-					{% for side in profile.sides %}
-						{{side}}<br/>
+					Tag line: {{ profile.describe_line }}<br/>
+					{% for index, side in zip(range(0, len(profile.sides)), profile.sides) %}
+						Side {{index+1}}:    {{side}}<br/>
 					{% end %}
-					<br/><br/>
+					<br/>
 				{% end %}
+				
 			    {% end %}
+				<a class="btn" data-toggle="modal" href="#profile_create">Create a new profile</a>
 			</div>
 		    </div>
 		    <a class="btn" data-toggle="collapse" data-target=".account-collapse" style="margin-bottom: 20px;">Account</a>
@@ -34,6 +69,70 @@
 			</div>
 		    </div>
 		</div>
+<!-- Profile creation modal -->
+<div id="profile_create" class="modal hide fade">
+  <form class="form-horizontal" method="post" action="/settings/profile" >
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>Create a profile</h3>
+  </div>
+  <div class="modal-body">
+    <p>A profile is used to interpret what your Smart-Cube means.</p>
+      <div class="control-group">
+	<label class="control-label" for="p_name">Profile name</label>
+	<div class="controls">
+          <input type="text" name="name" id="p_name"/><br/>
+	</div>
+      </div>
+      <div class="control-group">
+	<label class="control-label" for="p_desc">Tag line</label>
+	<div class="controls">
+          <input type="text" name="desc" id="p_desc"/><br/>
+	</div>
+      </div>
+      <div class="control-group">
+	<label class="control-label" for="p_s1">Top</label>
+	<div class="controls">
+          <input type="text" name="s1" id="p_s1"/><br/>
+	</div>
+      </div>
+      <div class="control-group">
+	<label class="control-label" for="p_s2">Bottom</label>
+	<div class="controls">
+          <input type="text" name="s2" id="p_s2"/><br/>
+	</div>
+      </div>
+      <div class="control-group">
+	<label class="control-label" for="p_s3">Left</label>
+	<div class="controls">
+          <input type="text" name="s3" id="p_s3"/><br/>
+	</div>
+      </div>
+      <div class="control-group">
+	<label class="control-label" for="p_s4">Right</label>
+	<div class="controls">
+          <input type="text" name="s4" id="p_s4"/><br/>
+	</div>
+      </div>
+      <div class="control-group">
+	<label class="control-label" for="p_s5">Front</label>
+	<div class="controls">
+          <input type="text" name="s6" id="p_s5"/><br/>
+	</div>
+      </div>
+      <div class="control-group">
+	<label class="control-label" for="p_s6">Back</label>
+	<div class="controls">
+          <input type="text" name="s5" id="p_s6"/><br/>
+	</div>
+      </div>
+  </div>
+  <div class="modal-footer">
+    <button href="#" class="btn" data-action="dismiss">Close</a>
+    <button href="#" type="submit" class="btn btn-primary">Save changes</a>
+  </div>
+  </form>
+</div>	
 	</div>
     </div>
 {% end %}
