Refactored stats to work with an AJAX JSON request. Implemented basic pie charts

--- a/web/templates/friends.html
+++ b/web/templates/friends.html
@@ -13,7 +13,7 @@
 			{% if cube.corresponding_profile is None %}
 			There was no profile attached to this Smart-Cube when it was last updated.
 			  {% if cube.profile is None %}
-				Attach a profile <a href="/settings">in the settings."</a>
+				Attach a profile <a href="/settings">in the settings</a>.
 			  {% else %}
 				Your current profile will come into effect on the next update.
 			  {% end %}
