--- a/web/templates/stats.html
+++ b/web/templates/stats.html
@@ -16,7 +16,9 @@
 	    <div class="cube" cube_id="{{cube.cube_id}}">
 		<h3>Smart-Cube {{ cube.code }}</h3>
 		<h4>Time spent in each state of profile {{cube.profile.name}}</h4>
-		<div id="graph-placeholder" style="width: 600px; height: 400px;">
+		<div class="graph-placeholder" style="width: 600px; height: 400px;">
+		</div>
+		<div class="label-hover">
 		</div>
 	    </div>
 	{% end %}
