--- a/web/templates/friends.html
+++ b/web/templates/friends.html
@@ -36,7 +36,11 @@
 				{%for friend in friends %}
 				<div class="friend">{{friend.name}} is
 					{% for cube in friend.cubes %}
-						<li>{{cube.corresponding_profile.describe_line}} {{cube.corresponding_profile.sides[ cube.rotation-1 ]}}</li>
+						{% if cube.corresponding_profile is None %}
+							<li>awaiting a cube update (Smart-Cube {{cube.code}})</li>
+						{% else %}
+							<li>{{cube.corresponding_profile.describe_line}} {{cube.corresponding_profile.sides[ cube.rotation-1 ]}} (Smart-Cube {{cube.code}})</li>
+						{% end %}
 					{% end %}
 				</div>
 				{% end %}
