--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -59,6 +59,7 @@
 	    {% end %}
 	</div>
     </div>
+<!--    <audio id="notif" src="notif.wav"  preload="auto" autobuffer></audio> -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="{{ static_url("js/bootstrap.min.js") }}"></script>
     {% block js %}
