--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -9,7 +9,13 @@
 	<div class="row-fluid">
 		<div class="span12">
 			<h3>Public Smart-Cubes</h3>
-			We have no public Smart-Cubes to display at the moment - Help us out and <a href="/settings">make one of your Smart-Cubes public!</a>
+			{% if len(public_cubes) == 0 %}
+				We have no public Smart-Cubes to display at the moment - Help us out and <a href="/settings">make one of your Smart-Cubes public!</a>
+			{% else %}
+				{% for cube in public_cubes %}
+					<span>Smart-Cube {{cube.code}} is {{cube.corresponding_profile.describe_line}} {{cube.corresponding_profile.sides[ cube.rotation-1 ]}}</span><br/>
+				{% end %}
+			{% end %}
 			<p><br/><a class="btn" href="/about">What are public cubes?</a><div>
 		</div>
 	</div>
