--- a/web/templates/friends.html
+++ b/web/templates/friends.html
@@ -72,7 +72,7 @@
 						</div><!-- END BODY -->
 						<div class="modal-footer">
 							<button href="#" class="btn" data-dismiss="modal">Close</a>
-							<button href="#" type="submit" class="btn btn-primary">Save changes</a>
+							<button href="#" type="submit" data-dismiss="modal" class="btn btn-primary">Save changes</a>
 						</div>
 					</div><!-- END MODAL -->	
 				</div>
