--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -96,7 +96,11 @@
 					You have no events set up!
 					{% else %}
 						{% for event in events %}
-						<span class="event">When {{event.name}} on Smart-Cube {{event.cube_code}} begins {{event.side_name}} then {{event.action_pretty}}.<br/><br/></span>
+						<div class="event" event_id="{{event.event_id}}">
+							<button type="button" id="delete" class="close">&times;</button>
+							<span class="event">When {{event.name}} on Smart-Cube {{event.cube_code}} begins {{event.side_name}} then {{event.action_pretty}}.</span>
+							<br/><br/>	
+						</div>
 						{% end %}
 					{% end %}
 				</div>
